feat: implementation of the adjacentRooms